--- a/css/about.css
+++ b/css/about.css
@@ -72,9 +72,30 @@ header{
     color:  #009f88;
 }
 
+
 /********************************************
   CONTENT
 *******************************************/
+.foto{
+display: inline-block;
+padding-top: 110px;
+}
+
+.inhalt-text{
+font-weight: 300;
+display: inline-block;
+vertical-align:top;
+text-align: left;
+padding-top: 220px;
+margin-left: 30px;
+}
+
+h1{
+  font-family: 'Open Sans' sans-serif;
+  font-weight: 700;
+  color: #009f88;
+  font-size: 21px;
+}
 
 footer{
   font-family: 'Open Sans' sans-serif;
