--- a/css/works.css
+++ b/css/works.css
@@ -72,9 +72,24 @@ header{
     color:  #009f88;
 }
 
-/********************************************
-  CONTENT
-*******************************************/
+
+
+.wrapper1{
+  font-family: 'Open Sans' sans-serif;
+}
+
+#container{
+	width:100%;
+	height:100%;
+	background: lightgrey;
+	display:flex;
+  flex-wrap: wrap;
+}
+
+#box1, #box2, #box3, #box4, #box5, #box6, #box7, #box8 {
+	width:33,3%;
+  height:430px;
+}
 
 footer{
   font-family: 'Open Sans' sans-serif;
